bugfix: z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ section {
   opacity: 0;
   transition: opacity 0.3s linear;
 
+  z-index: 10;
 }
 
 .top__link:hover {
